<!--
  ~ Copyright (c) 2012-2017 The ANTLR Project. All rights reserved.
  ~ Use of this file is governed by the BSD 3-clause license that
  ~ can be found in the LICENSE.txt file in the project root.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.antlr</groupId>
		<artifactId>antlr5-master</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>antlr5-runtime-testsuite</artifactId>
	<name>ANTLR 5 Runtime Tests (4th generation)</name>
	<description>A collection of tests for ANTLR 5 Runtime library.</description>

	<prerequisites>
		<maven>3.8</maven>
	</prerequisites>

	<inceptionYear>2009</inceptionYear>

	<properties>
		<jUnitVersion>5.9.0</jUnitVersion>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>ST4</artifactId>
			<version>4.3.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr5</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr5-runtime</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${jUnitVersion}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${jUnitVersion}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.1.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.openjdk.jol</groupId>
		    <artifactId>jol-core</artifactId>
		    <version>0.17</version>
		</dependency>
	</dependencies>

	<build>
		<testSourceDirectory>test</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<!-- SUREFIRE-951: file.encoding cannot be set via systemPropertyVariables -->
					<argLine>-Dfile.encoding=UTF-8</argLine>
                </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr5-maven-plugin</artifactId>
				<version>${project.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>antlr5</goal>
						</goals>
						<configuration>
							<sourceDirectory>${basedir}/test</sourceDirectory>
							<outputDirectory>${project.build.directory}/generated-test-sources/antlr5</outputDirectory>
							<visitor>true</visitor>
							<generateTestSources>true</generateTestSources>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>17</release>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
	</build>
</project>
